# opensource-clipping

./: .env.sample  .gitignore  CHANGELOG.md  LICENSE  OpenSource_Clipping.ipynb  README.md  README_ID.md  main.py  pyproject.toml  requirements.txt  run_upload.py  v2-youtube-clipping.ipynb  video_asli.en.json3
clipping/: ai_provider.py  config.py  diarization.py  engine.py  metadata.py  runner.py  studio.py
notebooks/: Lib_OpenSource_Clipping.ipynb
scripts/: push-origin.sh  sync-upstream.sh
youtube_uploader/: __init__.py  uploader.py
